Fix: alignment in FF

--- a/css/app.css
+++ b/css/app.css
@@ -37,6 +37,6 @@ body { color:#333 }
 .input-group-addon { padding: 8px 8px }
 #infoPanel .form-control { color: #eee; background-color: #464545; display:initial; width: initial; float:initial; height: 30px }
 #infoPanel .input-group { display:initial; margin-left:6px }
-#infoPanel .input-group-addon { display:initial; position:relative; top:-2px; padding:5px 0px }
+#infoPanel .input-group-addon { display:inline-block; padding:0; vertical-align: top; height:30px; line-height:28px }
 #infoPanel .selStart { padding-right:4px }
 #infoPanel .selEnd { padding-left:6px }
